SFDC Automation/src/objects/RSM_Component__c.object
<CustomObject>
    <description>Object to store the RydeSmart Components &amp; installation details</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>This field is Used to pass the AccountId to History Viewer VF page by clicking History Viewer button.</description>
        <formula>Unit_Number__r.Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Status_Date__c</fullName>
        <label>Asset Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Asset_Status_Flag__c</fullName>
        <label>Asset Status Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_ID__c</fullName>
        <externalId>true</externalId>
        <label>Component ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device_Status__c</fullName>
        <description>It is derived from Assert Status Flag</description>
        <label>Device Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Type__c</fullName>
        <label>Equipment Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_P_Address__c</fullName>
        <label>I.P. Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <label>Install Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Install_Location__c</fullName>
        <label>Install Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MIN__c</fullName>
        <label>MIN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Number__c</fullName>
        <label>Model Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Odometer_Dash__c</fullName>
        <label>Odometer Dash</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Odometer_ECM__c</fullName>
        <label>Odometer ECM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIM__c</fullName>
        <label>SIM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial__c</fullName>
        <label>Serial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_ID__c</fullName>
        <label>Tech ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Number</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>RSM Components</relationshipLabel>
        <relationshipName>RSM_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RSM Component</label>
    <nameField>
        <label>RSM Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RSM Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>